--- a/sosmed/package.json
+++ b/sosmed/package.json
@@ -21,7 +21,9 @@
     "react-native": "0.79.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
-    "@expo/vector-icons": "^14.1.0"
+    "@expo/vector-icons": "^14.1.0",
+    "expo-updates": "~0.28.13",
+    "expo-dev-client": "~5.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
